fixed page extra space on right + dashboard update

--- a/src/sass/bulma-dracula.scss
+++ b/src/sass/bulma-dracula.scss
@@ -198,6 +198,6 @@ div.content iframe {
  border-radius: 20px;
  font-family: discord;
 }
-*{
- margin: 0;
+.section{
+ padding: 3rem 0.5rem;
 }
